Fixed facebook overflow for mobiles

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@
 	color: #000;
 }
 
- body {
+body {
 	padding-top: 50px;
 	padding-bottom: 20px;
 }
@@ -43,4 +43,9 @@ h2{
 
 .bs-example{
 	margin: 20px;
+}
+
+footer {
+	width:100% !important;
+	overflow: auto;
 }
